# aitrans

./: README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  dev-codesign.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/gummy/: mod.rs
src-tauri/src/hotwords/: mod.rs
src-tauri/src/pipeline/: mod.rs
src/lib/: api.ts  types.ts
src/routes/: +page.svelte
src/routes/overlay/: +layout.ts  +page.svelte
